--- a/index.html
+++ b/index.html
@@ -41,42 +41,61 @@
                     <h3>Elegant Gold Necklace</h3>
                     <p class="product-price">Rs.990</p>
                      <p class="product-price1">Rs.550</p>
-                    <a href="products.html" class="add-to-cart-btn" style="text-decoration: none;">View Details</a>
+                   <a href="products.html" class="view-btn">View Details</a>
+
+<style>
+.view-btn {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: rgb(54, 45, 45);      /* Initial color */
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: 0.3s ease;        /* Smooth hover transition */
+}
+
+.view-btn:hover {
+    background-color: goldenrod;
+    color: black;  /* Hover color */
+}
+</style>
+
+
                 </div>
                  <div class="product-card">
                     <img src="images/earrings1.jpg" alt="Featured Earrings">
                     <h3>Sparkling Diamond Earrings</h3>
                     <p class="product-price">Rs.350</p>
                      <p class="product-price1">Rs.250</p>
-                     <a href="products.html" class="add-to-cart-btn" style="text-decoration: none;">View Details</a>
+                     <a href="products.html" class="view-btn" style="text-decoration: none;">View Details</a>
                 </div>
                  <div class="product-card">
                     <img src="images/bracelet1.jpg" alt="Featured Bracelet">
                     <h3>Golden Charm Bracelet</h3>
                     <p class="product-price">Rs.1050</p>
                      <p class="product-price1">Rs.620</p>
-                     <a href="products.html" class="add-to-cart-btn" style="text-decoration: none;">View Details</a>
+                     <a href="products.html" class="view-btn" style="text-decoration: none;">View Details</a>
                 </div>
                  <div class="product-card">
                     <img src="images/beads1.jpg" alt="Featured Bracelet">
                     <h3>Charm Beads</h3>
                     <p class="product-price">Rs.2</p>
                      <p class="product-price1">Rs.1</p>
-                     <a href="products.html" class="add-to-cart-btn" style="text-decoration: none;">View Details</a>
+                     <a href="products.html" class="view-btn" style="text-decoration: none;">View Details</a>
                 </div>
                  <div class="product-card">
                     <img src="images/watch1.jpg" alt="Featured Bracelet">
                     <h3>Golden Aesthetic Watch</h3>
                     <p class="product-price">Rs.1550</p>
                     <p class="product-price1">Rs.1200</p>
-                     <a href="products.html" class="add-to-cart-btn" style="text-decoration: none;">View Details</a>
+                     <a href="products.html" class="view-btn" style="text-decoration: none;">View Details</a>
                 </div>
                  <div class="product-card">
                     <img src="images/rings1.webp" alt="Featured Bracelet">
                     <h3>Beautiful Rings</h3>
                     <p class="product-price">Rs.650</p>
                     <p class="product-price1">Rs.400</p>
-                     <a href="products.html" class="add-to-cart-btn" style="text-decoration: none;">View Details</a>
+                     <a href="products.html" class="view-btn" style="text-decoration: none;">View Details</a>
                 </div>
             </div>
         </section>
